<resources>
    <string name="app_name">NewTime</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="goals">Цели</string>
    <string name="tasks">Задачи</string>
    <string name="tasks_today">Задачи сегодня</string>
    <string name="habits">Привычки</string>
    <string name="profile">Профиль</string>
    <string name="on_boarding_one">Дорогой пользователь, добро пожаловать в NewTime! Готов к новым достижениям и улучшению качества жизни? Тогда погнали!</string>
    <string name="on_boarding_two">Ставить и достигать цели с методом SMART удобно и легко!</string>
    <string name="on_boarding_three">"Выполняй назначенные задачи"</string>
    <string name="on_boarding_for">Вырабатывай полезные привычки и избавляйся от плохих!</string>
    <string name="on_boarding_five">Следи за своим прогрессом в разных сферах жизни!</string>
    <string name="task">Задача</string>
    <string name="goal">Цель</string>
    <string name="habit">Привычка</string>
    <string name="new_goal">НОВАЯ ЦЕЛЬ</string>
    <string name="new_task">НОВАЯ ЗАДАЧА</string>
    <string name="new_habit">НОВАЯ ПРИВЫЧКА</string>
    <string name="prize_et">Награда...</string>
    <string name="desc">Описание...</string>
    <string name="count_days">Количество дней</string>
    <string name="interval">Интервал</string>
    <string name="icon">Иконка</string>
    <string name="skill">Навык</string>
    <string name="unit">Единица измерения</string>
    <string name="measure">Мера (кол-во)</string>
    <string name="deadline">Выполнить до</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="repeat">Повтор</string>
    <string name="priority">Приоритет</string>
    <string name="alarm">Будильник</string>
    <string name="actives">Активные</string>
    <string name="comleted_habits">Выработанные</string>
    <string name="comleted">Достигнутые</string>
    <string name="goals_complete_empty">Достигнутых целей пока нет...</string>
    <string name="habits_complete_empty">Выработанных привычек пока нет...</string>
    <string name="premium">ПРЕМИУМ</string>
    <string name="pro_sprints">Создавайте спринты к целям</string>
    <string name="pro_statistic">Подробная статистика твоих достижений</string>
    <string name="pro_motivation">Платность - мотивация к выполнению</string>
    <string name="pro_sygnal">Будильники к задачам</string>
    <string name="pro_theme">Больше цветовых оформлений</string>
    <string name="without_date">Без рекламы</string>
    <string name="pro_data">Резервоное копирование</string>
    <string name="pro_settings">Настройки</string>
    <string name="buy">Приобрести</string>
    <string name="newfocus">NewFocus - будь в фокусе</string>
    <string name="menu_data">Резервное копирование</string>
    <string name="menu_star">Поставьте нам оценку</string>
    <string name="menu_statistic">Статистика</string>
    <string name="menu_lock">Пароль на вход</string>
    <string name="menu_premium">Премиум</string>
    <string name="add">СОЗДАТЬ</string>
    <string name="habits_today_empty">Привычек сегодня нет...</string>
    <string name="save">Сохранить</string>
    <string name="there_empty">Здесь пока пусто...</string>
</resources>