<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VerticalLinearLayout"
    tools:background="@color/bg_tools_fg"
    tools:context=".ui.tasks.add_or_edit.AddTaskFragment">

    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:id="@+id/title_toolbar"
            style="@style/TextToolBar"
            android:text="@string/new_task" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save"
            style="@style/ButtonToolBar"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_done" />

    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        style="@style/EditTextDesc" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_calendar_"
        android:text="@string/date" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_time_oclock"
        android:text="@string/time" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:text="@string/priority"
        android:drawableStart="@drawable/ic_flag" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_rotate"
        android:text="@string/repeat"
        />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:text="@string/alarm"
        android:drawableStart="@drawable/ic_alarm" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:text="@string/skill"
        android:drawableStart="@drawable/ic_skill" />


</LinearLayout>