<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_main_page"
        android:icon="@drawable/ic_main"
        android:title="@string/main"/>

    <item
        android:id="@+id/item_goals_page"
        android:icon="@drawable/ic_goal"
        android:title="@string/goals"/>

<!--    <item-->
<!--        android:id="@+id/item_tasks_page"-->
<!--        android:icon="@drawable/ic_tasks"-->
<!--        android:title="@string/tasks"-->
<!--        />-->

    <item
        android:id="@+id/item_habits_page"
        android:icon="@drawable/ic_habit"
        android:title="@string/habits"/>

    <item
        android:id="@+id/item_profile_page"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>