<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VerticalLinearLayout"
    android:background="?light"
    tools:background="@color/bg_tools_fg"
    tools:context=".ui.goals.add_or_edit.AddGoalFragment">

    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_back_24" />
        <TextView
            android:id="@+id/title_toolbar"
            style="@style/TextToolBar"
            android:text="@string/new_goal" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save"
            style="@style/ButtonToolBar"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_done" />
    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        style="@style/EditTextDesc" />

    <TextView
        android:id="@+id/date_deadline"
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_measure"
        android:text="@string/unit" />

    <TextView
        android:id="@+id/date"
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_tachometer_fastest"
        android:text="@string/measure"
        />
    <TextView
        android:id="@+id/dat"
        style="@style/AddOrEditFieldTextView"
        android:drawableStart="@drawable/ic_calendar_"
        android:text="@string/deadline" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:text="@string/icon"
        android:drawableStart="@drawable/ic_flower" />

    <TextView
        style="@style/AddOrEditFieldTextView"
        android:text="@string/skill"
        android:drawableStart="@drawable/ic_skill" />

    <EditText
        android:id="@+id/prize"
        style="@style/EditTextDrawableAddOrEdit"
        android:hint="@string/prize_et"
        android:drawableStart="@drawable/ic_trophy" />

</LinearLayout>