<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/VerticalLinearLayout">

    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/title"
            style="@style/TextToolBar"
            android:text="@string/add" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save"
            style="@style/ButtonToolBar"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/add_task"
        style="@style/MenuItemTextWithDrawable"
        android:drawableStart="@drawable/ic_tasks"
        android:text="@string/task" />

    <TextView
        android:id="@+id/add_goal"
        style="@style/MenuItemTextWithDrawable"
        android:drawableStart="@drawable/ic_goal"
        android:text="@string/goal" />

    <TextView
        android:id="@+id/add_habit"
        style="@style/MenuItemTextWithDrawable"
        android:drawableStart="@drawable/ic_habit"
        android:layout_marginBottom="26dp"
        android:text="@string/habit" />
</LinearLayout>