<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VerticalLinearLayout"
    tools:background="@color/bg_tools_fg"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white">

        <TextView
            style="@style/TextTitle"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="Сферы жизни инфа ред"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1">

            <com.github.mikephil.charting.charts.RadarChart
                android:id="@+id/radarChart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="26dp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_white">


        <TextView
            android:id="@+id/menu_pro"
            style="@style/MenuItemProfile"
            android:text="@string/menu_premium"
            android:drawableStart="@drawable/ic_crown"/>
        <TextView
            style="@style/MenuItemProfile"
            android:text="@string/menu_lock"
            android:drawableStart="@drawable/ic_lock"/>
        <TextView
            style="@style/MenuItemProfile"
            android:text="@string/menu_statistic"
            android:drawableStart="@drawable/ic_stats"/>
        <TextView
            style="@style/MenuItemProfile"
            android:text="@string/menu_star"
            android:drawableStart="@drawable/ic_heart"/>
        <TextView
            style="@style/MenuItemProfile"
            android:text="@string/menu_data"
            android:drawableStart="@drawable/ic_cloud_download"/>
        <TextView
            style="@style/MenuItemProfile"
            android:text="@string/newfocus"
            android:drawableStart="@drawable/ic_time_oclock"/>


    </LinearLayout>

</LinearLayout>